--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ apply plugin: 'org.jetbrains.intellij'
 intellij {
     version '2017.3.5'
     pluginName 'CleanCodeMethodRearranger'
-    intellij.updateSinceUntilBuild false //Disables updating since-build attribute in plugin.xml
+    intellij.updateSinceUntilBuild false
 }
 
 group 'com.jucham'
-version '0.1'
+version '0.2'
