--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "org.jetbrains.intellij" version "0.2.18"
+    id 'org.jetbrains.intellij' version '0.4.16'
 }
 
 apply plugin: 'org.jetbrains.intellij'
@@ -12,10 +12,10 @@ intellij {
 
 
 publishPlugin {
-    username intellijPublishUsername
-    password intellijPublishPassword
+    token intellijPublishToken
 }
 
 
 group 'com.jucham'
 version '0.4'
+sourceCompatibility = 1.8
